fix bug 650750, perf slowdown with NFS local mailboxes, r=bienvenu